<resources>
    <string name="app_name">Farm Store Locator</string>
    <string name="test">Lorem Ipsum</string>
    <string name="settings_page">Settings Page</string>
    <string name="tb_menu">Toolbar Menu</string>
    <string name="title_activity_maps">Map</string>
    <string name="pw_change">Change Password</string>
    <string name="email_change">Change eMail</string>
    <string name="name_change">Change Name</string>
    <string name="impressum">Impressum</string>
    <string name="contact">Contact</string>
    <string name="faq">FAQ</string>
    <string name="name_hint">John Doe</string>
    <string name="email_hint">john.doe@gmail.com</string>
    <string name="pw_reenter_hint">re-enter Password</string>
    <string name="pw">********</string>
    <string name="shopnamedummy">Shop Name</string>
    <string name="openhours">Opening Hours</string>
    <string name="openhoursdata">07:00 - 12:00</string>
    <string name="addr">Address</string>
    <string name="addrzipcode">8250 Vorau</string>
    <string name="addrstreet">Dr. Mühlbauerweg 420</string>
    <string name="products">Products</string>
    <string name="already_scanned_products">Already Scanned Products</string>
    <string name="scan">Scan Products</string>
    <string name="scanprod">Scan Product</string>
    <string name="payment">Proceed with Payment</string>
    <string name="sum">Sum:</string>
    <string name="dummysum">30,20€</string>
    <string name="map_key" translatable="false">AIzaSyDQuSSVTuoazqAQB38pE76UQ-UaLB0749c</string>
</resources>